Added AuthMiddleware
